[package]
name = "wasmluaparser"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
emmylua_code_analysis = "0.21"
emmylua_parser = "0.24"
emmylua_parser_desc = "0.24"
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
tokio-util = "0.7.15"
emmy_lsp_types = "0.1.0"
luars = "0.14"
getrandom = { version = "0.3", features = ["wasm_js"] }
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3", features = ["console"] }
stylua = { version = "2.4", features = ["lua52", "lua53", "lua54", "cfxlua", "luajit", "luau"] }
serde = { version = "1.0.228", features = ["derive"] }
rowan = "0.16.1"
itertools = "0.11.0"
tokio = { version = "1", features = ["rt", "macros", "time"] }
once_cell = "1.21"

[patch.crates-io]
libc = { path = "./libc_shim" }
emmylua_code_analysis = { git = "https://github.com/LostEngine/patched-libraries", branch = "EmmyLuaLs/emmylua-analyzer-rust" }
emmylua_ls = { git = "https://github.com/LostEngine/patched-libraries", branch = "EmmyLuaLs/emmylua-analyzer-rust" }
emmylua_parser = { git = "https://github.com/LostEngine/patched-libraries", branch = "EmmyLuaLs/emmylua-analyzer-rust" }
emmylua_parser_desc = { git = "https://github.com/LostEngine/patched-libraries", branch = "EmmyLuaLs/emmylua-analyzer-rust" }
luars = { git = "https://github.com/LostEngine/patched-libraries", branch = "CppCXY/lua-rs" }
emmy_lsp_types = { git = "https://github.com/LostEngine/patched-libraries", branch = "EmmyLuaLs/emmy_lsp_types" }
